# briefforge

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/web/: .env.example  middleware.ts  package.json  tailwind.config.mjs  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: layout.tsx  page.tsx
apps/web/lib/: answer-runs-queries.ts  briefs-queries.ts  evals-queries.ts  jobs-queries.ts  jobs-retry.ts  (+3 more)
docs/: api-contracts.md  architecture.md  demo-script.md  demo-walkthrough.md  future-updates.md  local-development.md  security.md
docs/decisions/: 001-pgvector-over-external-vector-db.md  002-async-indexing.md  003-structured-briefs-and-citations.md  004-dotnet-indexing-worker-as-optional-alternative.md
infra/docker/: web.Dockerfile  worker.Dockerfile
infra/scripts/: migrate.ts  seed.ts  smoke.ts
services/indexing-worker/: pyproject.toml  requirements.txt
services/indexing-worker-dotnet/: BriefForge.IndexingWorker.csproj  Program.cs  appsettings.json
services/indexing-worker/src/: __init__.py  main.py
services/indexing-worker/src/briefforge_indexing_worker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/indexing-worker/src/clients/: __init__.py  db.py
services/indexing-worker/src/jobs/: __init__.py  chunk_source.py  embed_chunks.py  parse_source.py
services/indexing-worker/src/models/: __init__.py  schemas.py
supabase/: config.toml  seed.sql
supabase/migrations/: 0001_init.sql  0002_jobs_created_at.sql
(+44 files in other folders)
